  - The `status` action no longer exists.
  - The `DefaultBlockStatus` and `BlockingMethod` directives are gone.  For similar behavior, see the new `ibmod_block` module.
  - The `IB_TX_BLOCKED` flag is gone.  Use `ib_tx_is_blocked()` instead.
- All state changes have been renamed from "events" to "states".

**Development**

- Predicate header files have been moved to include/ironbee/predicate.  They are now installed.
- Publix module header files are now in include/ironbee/module.  They are now installed.

**Build**

- Lua is now required.

**Predicate**

- Predicate has been split into multiple modules.  To get identical behavior to 0.10.x, load `ibmod_predicate_core` and `ibmod_predicate_rules` in that order instead of `ibmod_predicate` (which is now gone).  In the future, the Predicate core may be used for other tasks than the rule injection system, while still taking advantage of a single (per-context) DAG across all Predicate modules.
- `PredicateAssertValid` has been removed.  The behavior became always on in 0.10.x and now the results are now logged rather than written to a file, so there is no reason to need a directive to choose the file.

**IronBee++**

- Added `Engine::register_rule_ownership()` and `Engine::register_rule_injection()` which cover `ib_rule_register_ownership_fn()` and `ib_rule_register_injection_fn()`, respectively.

**Modules**

- A new module, `ibmod_clipp_test_support` has been added which defined the actions and operators previously only available inside clipp.  The `clipp_test` framework automatically loads this module.
- Remove deprecated `SQLiPatternSet` directive in favor of renamed `LibInjectionFingerprintSet` directive from the libinjection module.
- The pcre module now exposes two transformations: `filterValueRx` and `filterNameRx` which can be used to select items from lists by value or name.

== IronBee v0.10.0

**Build**
